edit index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="mainbox">
         <div class="menu">menu</div>
-        <div class="leftside">leftside</div>
+        <div class="leftside">leftfdsfsfside</div>
         <div class="main">main</div>
         <div class="rightside">rightside</div>
         <div class="footer">footer</div>
