edit index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="mainbox">
         <div class="menu">menu</div>
         <div class="leftside">leftfdsfsfside</div>
-        <div class="main">main</div>
+        <div class="main">masfdin</div>
         <div class="rightside">rightside</div>
         <div class="footer">footer</div>
     </div>
