--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
     <div class="mainbox">
-        <div class="menu">menu</div>
-        <div class="leftside">leftfdsfsfside</div>
-        <div class="main">masfdin</div>
+        <div class="menu">
+
+            <ul>
+                <li><a href=""></a>Home</li>
+                <li><a href=""></a>Portfolio</li>
+                <li><a href=""></a>About me</li>
+                <li><a href=""></a>Contact</li>
+            </ul>
+
+        </div>
+        <div class="leftside">left</div>
+        <div class="main">main</div>
         <div class="rightside">rightside</div>
         <div class="footer">footer</div>
     </div>
