--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
             </ul>
 
         </div>
-        <div class="leftside">left</div>
-        <div class="main">main</div>
-        <div class="rightside">rightside</div>
+        <div class="leftside">
+            <img src="images/1.jpg" alt="">
+        </div>
+
+        <div class="main">
+            <img src="images/1.jpg" alt="">
+        </div>
+
+        <div class="rightside">
+            <img src="images/1.jpg" alt="">
+        </div>
         <div class="footer">footer</div>
     </div>
 </body>
