--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="mainbox">
         <div class="menu">
-
+            
             <ul>
+                <a href="start.html"><img src="images/logo.png" alt="" class="logo"></a>
                 <li><a href=""></a>Home</li>
                 <li><a href=""></a>Portfolio</li>
                 <li><a href=""></a>About me</li>
@@ -19,17 +20,17 @@
 
         </div>
         <div class="leftside">
-            <img src="images/1.jpg" alt="">
+            <a href="home.html"><img src="images/1.jpg" alt=""></a>
         </div>
 
         <div class="main">
-            <img src="images/1.jpg" alt="">
+            <a href="home.html"><img src="images/1.jpg" alt=""></a>
         </div>
 
         <div class="rightside">
-            <img src="images/1.jpg" alt="">
+            <a href="home.html"><img src="images/1.jpg" alt=""></a>
         </div>
-        <div class="footer">footer</div>
+        <div class="footer">2020 Ynestu phptography</div>
     </div>
 </body>
 </html>
