pievienojo jaunas lapas un pievienoju jaunu informāciju

--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,22 @@
 
     </div>
     <div class="leftside">
-        <a href="home.html"><img src="images/1.png" alt=""></a>
+
     </div>
 
-    <div class="main">
-        <a href="portrait.html"><img src="images/2.png" alt=""></a>
+    <div class="contact">
+        <form action="">
+            <label for="name">Your name</label>
+            <input type="text" placeholder="Your name...">
+            <label for="email">Email</label>
+            <input type="email">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" style="height: 200px" ></textarea>
+        </form>
     </div>
 
     <div class="rightside">
-        <a href="home.html"><img src="images/3.png" alt=""></a>
+
     </div>
     <div class="footer">2020 Ynestu phptography</div>
 </div>
