--- a/index.html
+++ b/index.html
@@ -7,30 +7,8 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <div class="mainbox">
-        <div class="menu">
-            
-            <ul>
-                <a href="start.html"><img src="images/logo.png" alt="" class="logo"></a>
-                <li><a href=""></a>Home</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>About me</li>
-                <li><a href=""></a>Contact</li>
-            </ul>
-
-        </div>
-        <div class="leftside">
-            <a href="home.html"><img src="images/1.jpg" alt=""></a>
-        </div>
-
-        <div class="main">
-            <a href="home.html"><img src="images/1.jpg" alt=""></a>
-        </div>
-
-        <div class="rightside">
-            <a href="home.html"><img src="images/1.jpg" alt=""></a>
-        </div>
-        <div class="footer">2020 Ynestu phptography</div>
-    </div>
+<div class="startscreen">
+    <a href="home.html"><div>Some text</div></a>
+</div>
 </body>
 </html>
