Pievienoju java script failu, editoju portrait page pievienojot bildes, editoju contact page

--- a/portrait.html
+++ b/portrait.html
@@ -19,16 +19,24 @@
         </ul>
 
     </div>
-    <div class="leftside">
-        <a href="home.html"><img src="images/1.png" alt=""></a>
+    <div class="leftsideportrait">
+
     </div>
 
-    <div class="main">
-        <a href="portrait.html"><img src="images/2.png" alt=""></a>
+    <div class="mainportrait">
+        <a href=""><img src="images/portrait1.JPG" alt=""></a>
+        <a href=""><img src="images/portrait2.JPG" alt=""></a>
+        <a href=""><img src="images/portrait3.JPG" alt=""></a>
+        <a href=""><img src="images/portrait4.JPG" alt=""></a>
+        <a href=""><img src="images/portrait5.jpg" alt=""></a>
+        <a href=""><img src="images/portrait6.JPG" alt=""></a>
+        <a href=""><img src="images/portrait7.JPG" alt=""></a>
+        <a href=""><img src="images/portrait8.jpg" alt=""></a>
+        <a href=""><img src="images/portrait9.JPG" alt=""></a>
     </div>
 
-    <div class="rightside">
-        <a href="home.html"><img src="images/3.png" alt=""></a>
+    <div class="rightsideportrait">
+
     </div>
     <div class="footer">2020 Ynestu phptography</div>
 </div>
