--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:row="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -23,14 +23,29 @@
 
     </div>
 
-    <div class="contact">
+    <div class="contactmain">
+
+        <img src="images/portrait1.JPG" alt="">
+        <br>
+        <H1><b>Contact</b></H1>
+        <br>
         <form action="">
-            <label for="name">Your name</label>
-            <input type="text" placeholder="Your name...">
+            <label for="name">Name</label>
+            <br>
+            <input type="text" placeholder="Your name..." id="name" required>
+            <br>
+            <br>
             <label for="email">Email</label>
-            <input type="email">
-            <label for="message">Message</label>
-            <textarea name="message" id="message" style="height: 200px" ></textarea>
+            <br>
+
+            <input type="email" placeholder="Your email..." id="email" required>
+            <br>
+            <br>
+            <label for="Message">Message</label>
+            <br>
+            <textarea name="message" id="message" placeholder="Your message..." rows="10" cols="37" required></textarea>
+            <br>
+            <input type="submit" value="Submit" id="submit">
         </form>
     </div>
 
