--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="startscreen">
-    <a href="home.html"><div>Viktors Milutins</div></a>
+    <a href="home.html"><img src="images/logo_start.png" alt="" class="startlogo"></a>
 </div>
 </body>
 </html>
