editoju about.html, home.html un styles.css lapasa

--- a/home.html
+++ b/home.html
@@ -30,7 +30,12 @@
     <div class="rightside">
         <a href="home.html"><img src="images/3.png" alt=""></a>
     </div>
-    <div class="footer">2020 Ynestu phptography</div>
+
+    <footer>
+        <h2>2020 Ynestu phptography</h2>
+    </footer>
+
 </div>
+
 </body>
 </html>
