--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <script src="java.js"></script>
 </head>
 <body>
 <div class="mainbox">
@@ -13,7 +14,17 @@
         <ul>
             <a href="index.html"><img src="images/logo.png" alt="" class="logo"></a>
             <li><a href="home.html">Home</a></li>
-            <li><a href="">Portfolio</a></li>
+
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Portfolio</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Nature</a>
+                    <a href="portrait.html">Portrait</a>
+                    <a href="#">Street photography</a>
+                    <a href="#">Video</a>
+                </div>
+            </div>
+
             <li><a href="about.html">About me</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
