Izveidoju street.html

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <div id="myDropdown" class="dropdown-content">
                     <a href="#">Nature</a>
                     <a href="portrait.html">Portrait</a>
-                    <a href="#">Street photography</a>
+                    <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
                 </div>
             </div>
