--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <div id="myDropdown" class="dropdown-content">
                     <a href="#">Nature</a>
                     <a href="portrait.html">Portrait</a>
-                    <a href="#">Street photography</a>
+                    <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
                 </div>
             </div>
