Izveidoju nature.html, pielaboju majas lapu

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Nature</a>
+                    <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
@@ -63,7 +63,7 @@
     <div class="rightside">
 
     </div>
-    <div class="footer">2020 Ynestu phptography</div>
+
 </div>
 </body>
 </html>
