--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Nature</a>
+                    <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
@@ -31,7 +31,7 @@
 
     </div>
     <div class="leftside">
-        <a href="home.html"><img src="images/1.png" alt=""></a>
+        <a href="nature.html"><img src="images/1.png" alt=""></a>
     </div>
 
     <div class="main">
@@ -39,7 +39,7 @@
     </div>
 
     <div class="rightside">
-        <a href="home.html"><img src="images/3.png" alt=""></a>
+        <a href="street.html"><img src="images/3.png" alt=""></a>
     </div>
 
     <footer>
