--- a/portrait.html
+++ b/portrait.html
@@ -18,7 +18,7 @@
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Nature</a>
+                    <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
