--- a/street.html
+++ b/street.html
@@ -18,7 +18,7 @@
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Nature</a>
+                    <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
                     <a href="#">Video</a>
@@ -37,14 +37,11 @@
     <div class="streetmain">
         <img src="images/street1.jpg" alt="">
         <img src="images/street2.jpg" alt="">
-
         <img src="images/street4.jpg" alt="">
         <img src="images/street5.jpg" alt="">
-
         <img src="images/street8.jpg" alt="">
         <img src="images/street9.jpg" alt="">
         <img src="images/street10.jpg" alt="">
-
         <img src="images/street12.jpg" alt="">
         <img src="images/street13.jpg" alt="">
 
