Izveidoju galeriju ar lightbox, editoju contact.html

--- a/about.html
+++ b/about.html
@@ -46,25 +46,28 @@
         <br>
 
         <p>
-            Can't sign in to Adobe account with social account | Don't have access to social account anymore
-            You were previously able to sign in to your Adobe account with Facebook, Google, or Apple (social account). Now, you are unable to sign in with your social account, or don't have access to your social account anymore.
+            Hey there!
         </p>
         <br>
         <p>
-            Solution
-            Sign in with your Adobe ID and password. Your Adobe ID is the email address associated with your social account.
+            My name is Vikotrs Milutins, I live in Latvia and it is my website.
+            Im a student and I like to make photos and traveling. All photos what you can see, is created by myself.
         </p>
         <br>
         <p>
-            Haven't set up your Adobe ID password? Follow the steps below to set up your password if you have added your mobile number or alternative email to your Adobe account.
-            NOTE:
-            If you haven't added your mobile phone number or alternative email to your Adobe account, contact us.
+            In my website you can see nature, portrait and street photos. In future you can see more photos and more categories.
         </p>
         <br>
         <p>
-            On the Adobe account sign-in page, enter your Adobe ID, and then click Continue.
-            Apple ID user?
-            Sometimes you only see a dummy email address while signing in to different services using Apple. To get your actual Apple ID email address, go to Apple settings on your iPhone/iPad.
+            To create photo i use:
+            <br>
+            <br>
+            Camera - Nikon d3400/
+            <br>
+            Lens - AF-S nikkor 35mm 1:1.8G and AF-P nikkor 18-55mm 1:35-5.6G/
+            <br>
+            Flash - Yongnuo YN968N II/
+            <br>
 
         </p>
         <br>
