--- a/portrait.html
+++ b/portrait.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="lightbox.min.css">
+    <script src="lightbox-plus-jquery.min.js"></script>
     <script src="java.js"></script>
 </head>
 <body>
@@ -35,15 +37,15 @@
     </div>
 
     <div class="mainportrait">
-        <a href=""><img src="images/portrait1.JPG" alt=""></a>
-        <a href=""><img src="images/portrait2.JPG" alt=""></a>
-        <a href=""><img src="images/portrait3.JPG" alt=""></a>
-        <a href=""><img src="images/portrait4.JPG" alt=""></a>
-        <a href=""><img src="images/portrait5.jpg" alt=""></a>
-        <a href=""><img src="images/portrait6.JPG" alt=""></a>
-        <a href=""><img src="images/portrait7.JPG" alt=""></a>
-        <a href=""><img src="images/portrait8.jpg" alt=""></a>
-        <a href=""><img src="images/portrait9.JPG" alt=""></a>
+        <a href="images/portrait1Max.JPG" data-lightbox="mygallery"><img src="images/portrait1.JPG" alt=""></a>
+        <a href="images/portrait2Max.JPG" data-lightbox="mygallery"><img src="images/portrait2.JPG" alt=""></a>
+        <a href="images/portrait3Max.JPG" data-lightbox="mygallery"><img src="images/portrait3.JPG" alt=""></a>
+        <a href="images/portrait4Max.JPG" data-lightbox="mygallery"><img src="images/portrait4.JPG" alt=""></a>
+        <a href="images/portrait5Max.jpg" data-lightbox="mygallery"><img src="images/portrait5.jpg" alt=""></a>
+        <a href="images/portrait6Max.JPG" data-lightbox="mygallery"><img src="images/portrait6.JPG" alt=""></a>
+        <a href="images/portrait7Max.JPG" data-lightbox="mygallery"><img src="images/portrait7.JPG" alt=""></a>
+        <a href="images/portrait8Max.jpg" data-lightbox="mygallery"><img src="images/portrait8.jpg" alt=""></a>
+        <a href="images/portrait9Max.JPG" data-lightbox="mygallery"><img src="images/portrait9.JPG" alt=""></a>
     </div>
 
     <div class="rightsideportrait">
