--- a/street.html
+++ b/street.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="lightbox.min.css">
+    <script src="lightbox-plus-jquery.min.js"></script>
     <script src="java.js"></script>
 </head>
 <body>
@@ -35,15 +37,14 @@
     </div>
 
     <div class="streetmain">
-        <img src="images/street1.jpg" alt="">
-        <img src="images/street2.jpg" alt="">
-        <img src="images/street4.jpg" alt="">
-        <img src="images/street5.jpg" alt="">
-        <img src="images/street8.jpg" alt="">
-        <img src="images/street9.jpg" alt="">
-        <img src="images/street10.jpg" alt="">
-        <img src="images/street12.jpg" alt="">
-        <img src="images/street13.jpg" alt="">
+        <a href="images/street1Max.jpg" data-lightbox="mygallery"><img src="images/street1.jpg" alt=""></a>
+        <a href="images/street2Max.jpg" data-lightbox="mygallery"><img src="images/street2.jpg" alt=""></a>
+        <a href="images/street4Max.jpg" data-lightbox="mygallery"><img src="images/street4.jpg" alt=""></a>
+        <a href="images/street5Max.jpg" data-lightbox="mygallery"><img src="images/street5.jpg" alt=""></a>
+        <a href="images/street8Max.jpg" data-lightbox="mygallery"><img src="images/street8.jpg" alt=""></a>
+        <a href="images/street10Max.jpg" data-lightbox="mygallery"> <img src="images/street10.jpg" alt=""></a>
+        <a href="images/street12Max.jpg" data-lightbox="mygallery"><img src="images/street12.jpg" alt=""></a>
+
 
     </div>
 
