--- a/contact.html
+++ b/contact.html
@@ -36,23 +36,23 @@
 
     <div class="contactmain">
 
-        <img src="images/portrait1.JPG" alt="">
+        <img src="images/contact.png" alt="">
         <br>
         <H1><b>Contact</b></H1>
         <br>
         <form action="">
-            <label for="name">Name</label>
+            <label for="name">Name*</label>
             <br>
             <input type="text" placeholder="Your name..." id="name" required>
             <br>
             <br>
-            <label for="email">Email</label>
+            <label for="email">Email*</label>
             <br>
 
             <input type="email" placeholder="Your email..." id="email" required>
             <br>
             <br>
-            <label for="Message">Message</label>
+            <label for="Message">Message*</label>
             <br>
             <textarea name="message" id="message" placeholder="Your message..." rows="10" cols="37" required></textarea>
             <br>
