--- a/nature.html
+++ b/nature.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="lightbox.min.css">
+    <script src="lightbox-plus-jquery.min.js"></script>
     <script src="java.js"></script>
 </head>
 <body>
@@ -35,18 +37,18 @@
     </div>
 
     <div class="naturemain">
-        <img src="images/nature1.JPG" alt="">
-        <img src="images/nature2.JPG" alt="">
-        <img src="images/nature3.jpg" alt="">
-        <img src="images/nature6.jpg" alt="">
-        <img src="images/nature7.jpg" alt="">
-        <img src="images/nature9.jpg" alt="">
-        <img src="images/nature10.jpg" alt="">
-        <img src="images/nature11.jpg" alt="">
-        <img src="images/nature12.jpg" alt="">
-        <img src="images/nature13.jpg" alt="">
-        <img src="images/nature14.jpg" alt="">
-        <img src="images/nature16.jpg" alt="">
+
+        <a href="images/nature2.JPG" data-lightbox="mygallery"><img src="images/nature2.JPG" alt=""></a>
+        <a href="images/nature3.jpg" data-lightbox="mygallery"><img src="images/nature3.jpg" alt=""></a>
+        <a href="images/nature6.jpg" data-lightbox="mygallery"> <img src="images/nature6.jpg" alt=""></a>
+        <a href="images/nature7.jpg" data-lightbox="mygallery"><img src="images/nature7.jpg" alt=""></a>
+        <a href="images/nature9.jpg" data-lightbox="mygallery"><img src="images/nature9.jpg" alt=""></a>
+        <a href="images/nature10.jpg" data-lightbox="mygallery"><img src="images/nature10.jpg" alt=""></a>
+        <a href="images/nature11.jpg" data-lightbox="mygallery">><img src="images/nature11.jpg" alt=""></a
+        <a href="images/nature12.jpg" data-lightbox="mygallery"><img src="images/nature12.jpg" alt=""></a>
+        <a href="images/nature13.jpg" data-lightbox="mygallery"><img src="images/nature13.jpg" alt=""></a>
+        <a href="images/nature14.jpg" data-lightbox="mygallery"><img src="images/nature14.jpg" alt=""></a>
+        <a href="images/nature16.jpg" data-lightbox="mygallery"><img src="images/nature16.jpg" alt=""></a>
     </div>
 
     <div class="naturerightside">
