Izlaboju kludas, pievienoju video

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
-                    <a href="#">Video</a>
+                    <a href="video.html">Video</a>
                 </div>
             </div>
 
