--- a/nature.html
+++ b/nature.html
@@ -23,7 +23,7 @@
                     <a href="nature.html">Nature</a>
                     <a href="portrait.html">Portrait</a>
                     <a href="street.html">Street photography</a>
-                    <a href="#">Video</a>
+                    <a href="video.html">Video</a>
                 </div>
             </div>
 
@@ -38,17 +38,17 @@
 
     <div class="naturemain">
 
-        <a href="images/nature2.JPG" data-lightbox="mygallery"><img src="images/nature2.JPG" alt=""></a>
-        <a href="images/nature3.jpg" data-lightbox="mygallery"><img src="images/nature3.jpg" alt=""></a>
-        <a href="images/nature6.jpg" data-lightbox="mygallery"> <img src="images/nature6.jpg" alt=""></a>
-        <a href="images/nature7.jpg" data-lightbox="mygallery"><img src="images/nature7.jpg" alt=""></a>
-        <a href="images/nature9.jpg" data-lightbox="mygallery"><img src="images/nature9.jpg" alt=""></a>
-        <a href="images/nature10.jpg" data-lightbox="mygallery"><img src="images/nature10.jpg" alt=""></a>
-        <a href="images/nature11.jpg" data-lightbox="mygallery">><img src="images/nature11.jpg" alt=""></a
-        <a href="images/nature12.jpg" data-lightbox="mygallery"><img src="images/nature12.jpg" alt=""></a>
-        <a href="images/nature13.jpg" data-lightbox="mygallery"><img src="images/nature13.jpg" alt=""></a>
-        <a href="images/nature14.jpg" data-lightbox="mygallery"><img src="images/nature14.jpg" alt=""></a>
-        <a href="images/nature16.jpg" data-lightbox="mygallery"><img src="images/nature16.jpg" alt=""></a>
+        <a href="images/nature2Max.JPG" data-lightbox="mygallery"><img src="images/nature2.JPG" alt=""></a>
+        <a href="images/nature3Max.jpg" data-lightbox="mygallery"><img src="images/nature3.jpg" alt=""></a>
+        <a href="images/nature6Max.jpg" data-lightbox="mygallery"><img src="images/nature6.jpg" alt=""></a>
+        <a href="images/nature7Max.jpg" data-lightbox="mygallery"><img src="images/nature7.jpg" alt=""></a>
+        <a href="images/nature9Max.jpg" data-lightbox="mygallery"><img src="images/nature9.jpg" alt=""></a>
+        <a href="images/nature10Max.jpg" data-lightbox="mygallery"><img src="images/nature10.jpg" alt=""></a>
+        <a href="images/nature11Max.jpg" data-lightbox="mygallery"><img src="images/nature11.jpg" alt=""></a>
+        <a href="images/nature12Max.jpg" data-lightbox="mygallery"><img src="images/nature12.jpg" alt=""></a>
+        <a href="images/nature13Max.jpg" data-lightbox="mygallery"><img src="images/nature13.jpg" alt=""></a>
+        <a href="images/nature14Max.jpg" data-lightbox="mygallery"><img src="images/nature14.jpg" alt=""></a>
+        <a href="images/nature16Max.jpg" data-lightbox="mygallery"><img src="images/nature16.jpg" alt=""></a>
     </div>
 
     <div class="naturerightside">
